--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ footer, footer a {color:#fff;}
 <a href="https://gitlab.com/tudosobredetran">GitLab</a><br>
 <a href="https://tudosobredetran.gitlab.io/detran"> Git Lab Pages</a><br>
 <a href="https://github.com/tudosobredetran">Git Hub</a><br>
+<a href="https://tudosobredetran.github.io/detran/">Git Hub Pages</a><br>
+<a href="https://tudosobredetran.neocities.org">NeoCities</a><br>
 <p>
 </p>
 <br>
